21 -> 17 버전 다운 및 버전 다운에 따른 문법 오류 해결